--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@polaris/icons",
+  "name": "@pixels/icons",
   "version": "0.0.0",
   "description": "Core icon library for building Shopify experiences.",
   "sideEffects": false,
-  "main": "dist/polaris-icons.cjs.js",
-  "module": "dist/polaris-icons.esm.js",
+  "main": "dist/pixels-icons.cjs.js",
+  "module": "dist/pixels-icons.esm.js",
   "files": [
     "dist"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Shopify/polaris.git",
+    "url": "https://github.com/Shopify/pixels.git",
     "directory": "packages/icons"
   },
   "author": "Shopify",
