--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Sam Rose <samrose3@gmail.com>",
   "license": "MIT",
   "workspaces": [
+    "examples/*",
     "packages/*",
     "site"
   ],
