--- a/site/package.json
+++ b/site/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@styled-system/should-forward-prop": "^5.1.5",
+    "@pixels/components": "*",
+    "@pixels/tokens": "*",
     "next": "11.0.1"
   },
   "devDependencies": {
