--- a/package.json
+++ b/package.json
@@ -8,18 +8,11 @@
     "packages/*",
     "site"
   ],
-  "preconstruct": {
-    "packages": [
-      "packages/*"
-    ]
-  },
   "scripts": {
-    "build": "yarn build:tokens && preconstruct build",
-    "build:tokens": "manypkg run @pixels/tokens build",
-    "dev": "manypkg run site dev",
+    "build": "lerna run build --scope @pixels/*",
+    "dev": "lerna run --parallel --scope @pixels/* --scope site dev",
     "format": "eslint . --ext .ts,.tsx --fix",
     "lint": "manypkg check && eslint . --ext .ts,.tsx && tsc",
-    "postinstall": "preconstruct dev",
     "site:build": "manypkg run site build",
     "site:start": "manypkg run site start",
     "size": "size-limit",
@@ -35,7 +28,6 @@
     "@changesets/changelog-github": "^0.4.0",
     "@changesets/cli": "^2.16.0",
     "@manypkg/cli": "^0.18.0",
-    "@preconstruct/cli": "^2.1.0",
     "@size-limit/preset-big-lib": "^5.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -54,11 +46,13 @@
     "eslint-plugin-testing-library": "^4.9.0",
     "goober": "^2.0.39",
     "goober-autoprefixer": "^1.2.1",
+    "lerna": "^4.0.0",
     "prettier": "^2.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "size-limit": "^5.0.1",
     "ts-node": "^10.1.0",
-    "typescript": "4.3.5"
+    "typescript": "4.3.5",
+    "vite": "^2.4.4"
   }
 }
