--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -4,7 +4,9 @@
   "description": "Design tokens for building Shopify experiences.",
   "sideEffects": false,
   "main": "dist/pixels-tokens.cjs.js",
-  "module": "dist/pixels-tokens.esm.js",
+  "module": "dist/pixels-tokens.es.js",
+  "types": "dist/types/index.d.ts",
+  "typings": "dist/types/index.d.ts",
   "files": [
     "dist"
   ],
@@ -16,8 +18,11 @@
   "author": "Shopify",
   "license": "MIT",
   "scripts": {
-    "build": "ts-node ./src/build.ts",
-    "postinstall": "yarn build"
+    "build": "yarn build:tokens && yarn build:js && yarn build:tsc",
+    "build:js": "vite build",
+    "build:tokens": "ts-node ./src/build.ts",
+    "build:tsc": "tsc --emitDeclarationOnly --declaration --declarationDir dist/types",
+    "watch": "vite build --watch"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.171",
