--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     "target": "es5",
     "module": "commonjs",
     "lib": ["es2019", "es2017", "dom"],
-    "noEmit": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -19,7 +18,7 @@
     "isolatedModules": true,
     "downlevelIteration": true
   },
-  "exclude": ["node_modules", "**/dist/**"],
+  "exclude": ["node_modules"],
   "include": [
     "./jest.setup.ts",
     "packages/**/*",
