chore(scripts): Remove unused npm scripts

--- a/package.json
+++ b/package.json
@@ -12,23 +12,15 @@
     "build": "lerna run build --scope @pixels/*",
     "dev": "lerna run --parallel --scope @pixels/* --scope site dev",
     "format": "eslint . --ext .ts,.tsx --fix",
-    "lint": "manypkg check && eslint . --ext .ts,.tsx && tsc",
-    "site:dev": "manypkg run site dev",
-    "site:build": "manypkg run site build",
-    "site:start": "manypkg run site start",
+    "lint": "eslint . --ext .ts,.tsx && tsc",
     "size": "size-limit",
     "release": "yarn build && changeset publish",
     "test": "jest",
     "version": "changeset version && yarn"
   },
   "dependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.14.5",
     "@changesets/changelog-github": "^0.4.0",
     "@changesets/cli": "^2.16.0",
-    "@manypkg/cli": "^0.18.0",
     "@size-limit/preset-big-lib": "^5.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
