--- a/site/package.json
+++ b/site/package.json
@@ -9,13 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@styled-system/should-forward-prop": "^5.1.5",
+    "@pixels/css": "*",
     "@pixels/components": "*",
     "@pixels/tokens": "*",
-    "goober": "^2.0.39",
     "next": "11.0.1"
-  },
-  "devDependencies": {
-    "@types/styled-system__should-forward-prop": "^5.1.2"
   }
 }
