--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@types/react": "17.0.14",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
+    "@vanilla-extract/css": "^1.2.1",
+    "@vanilla-extract/sprinkles": "^1.0.0",
+    "@vanilla-extract/vite-plugin": "^1.1.1",
     "eslint": "7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
@@ -37,8 +40,6 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.9.0",
-    "goober": "^2.0.39",
-    "goober-autoprefixer": "^1.2.1",
     "lerna": "^4.0.0",
     "prettier": "^2.3.2",
     "react": "17.0.2",
