--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "lerna run build --scope @pixels/*",
-    "dev": "lerna run --parallel --scope @pixels/* --scope site dev",
+    "dev": "lerna run --stream --scope site dev",
     "format": "eslint . --ext .ts,.tsx --fix",
     "lint": "eslint . --ext .ts,.tsx && tsc",
     "size": "size-limit",
@@ -25,13 +25,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.172",
     "@types/prettier": "^2.3.2",
     "@types/react": "17.0.14",
+    "@types/tailwindcss": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "@vanilla-extract/css": "^1.2.1",
     "@vanilla-extract/sprinkles": "^1.0.0",
     "@vanilla-extract/vite-plugin": "^1.1.1",
+    "@vanilla-extract/webpack-plugin": "^1.1.0",
+    "css-loader": "^6.2.0",
     "eslint": "7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
@@ -41,12 +45,14 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.9.0",
     "lerna": "^4.0.0",
+    "mini-css-extract-plugin": "^2.2.0",
     "prettier": "^2.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "size-limit": "^5.0.1",
     "ts-node": "^10.1.0",
     "typescript": "4.3.5",
-    "vite": "^2.4.4"
+    "vite": "^2.4.4",
+    "webpack": "^5.50.0"
   }
 }
