WIP: Add vanilla-extract to next

--- a/site/package.json
+++ b/site/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vanilla-extract/css": "^1.2.3",
     "@pixels/css": "*",
     "@pixels/components": "*",
     "@pixels/tokens": "*",
     "next": "11.0.1"
+  },
+  "devDependencies": {
+    "@vanilla-extract/babel-plugin": "^1.0.1",
+    "@vanilla-extract/webpack-plugin": "^1.1.0",
+    "css-loader": "^6.2.0"
   }
 }
