--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
     "@vanilla-extract/css": "^1.2.1",
     "@vanilla-extract/sprinkles": "^1.0.0",
     "@vanilla-extract/vite-plugin": "^1.1.1",
-    "@vanilla-extract/webpack-plugin": "^1.1.0",
-    "css-loader": "^6.2.0",
     "eslint": "7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
@@ -45,14 +43,12 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.9.0",
     "lerna": "^4.0.0",
-    "mini-css-extract-plugin": "^2.2.0",
     "prettier": "^2.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "size-limit": "^5.0.1",
     "ts-node": "^10.1.0",
     "typescript": "4.3.5",
-    "vite": "^2.4.4",
-    "webpack": "^5.50.0"
+    "vite": "^2.4.4"
   }
 }
