--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/lodash": "^4.14.172",
     "@types/prettier": "^2.3.2",
     "@types/react": "17.0.14",
+    "@types/react-dom": "^17.0.9",
     "@types/tailwindcss": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
