--- a/site/.gitignore
+++ b/site/.gitignore
@@ -1,9 +1,5 @@
-# next.js
-/.next/
-/out/
-
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+node_modules
+.DS_Store
+dist
+dist-ssr
+*.local
