--- a/site/package.json
+++ b/site/package.json
@@ -1,17 +1,17 @@
 {
   "name": "site",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
-    "@pixels/css": "*",
     "@pixels/components": "*",
-    "@pixels/tokens": "*",
-    "next": "11.0.1"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react-refresh": "^1.3.1"
   }
 }
