--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "lerna run build --scope @pixels/*",
-    "dev": "lerna run --stream --scope site dev",
+    "dev": "cd site && yarn dev",
     "format": "eslint . --ext .ts,.tsx --fix",
     "lint": "eslint . --ext .ts,.tsx && tsc",
     "size": "size-limit",
@@ -18,7 +18,7 @@
     "test": "jest",
     "version": "changeset version && yarn"
   },
-  "dependencies": {
+  "devDependencies": {
     "@changesets/changelog-github": "^0.4.0",
     "@changesets/cli": "^2.16.0",
     "@size-limit/preset-big-lib": "^5.0.1",
@@ -32,10 +32,8 @@
     "@types/tailwindcss": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
-    "@vanilla-extract/css": "^1.2.1",
-    "@vanilla-extract/sprinkles": "^1.0.0",
     "@vanilla-extract/vite-plugin": "^1.1.1",
-    "@vanilla-extract/webpack-plugin": "^1.1.0",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "css-loader": "^6.2.0",
     "eslint": "7.30.0",
     "eslint-config-prettier": "^8.3.0",
