--- a/site/package.json
+++ b/site/package.json
@@ -7,11 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@pixels/components": "*",
+    "@vanilla-extract/css": "^1.2.1",
+    "@vanilla-extract/sprinkles": "^1.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.1"
   }
 }
