chore(package): Update package.json data

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@pixels/components",
   "version": "0.0.0",
-  "description": "Foundational components for building Shopify experiences.",
+  "description": "Foundational components for building Pixels experiences.",
   "main": "./src/index.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Shopify/pixels.git",
+    "url": "https://github.com/samrose3/pixels.git",
     "directory": "packages/components"
   },
-  "author": "Shopify",
+  "author": "Sam Rose <samrose3@gmail.com",
   "license": "MIT",
   "scripts": {
     "build": "yarn build:js && yarn build:tsc",
@@ -20,6 +20,7 @@
     "@vanilla-extract/sprinkles": "^1.0.0",
     "capsize": "^2.0.0",
     "clsx": "^1.1.1",
+    "dedent": "^0.7.0",
     "gradient-parser": "^1.0.2",
     "lodash": "^4.17.21",
     "polished": "^4.1.3",
