--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixels",
   "private": true,
-  "author": "Shopify",
+  "author": "Sam Rose <samrose3@gmail.com",
   "license": "MIT",
   "workspaces": [
     "examples/*",
@@ -24,6 +24,7 @@
     "@size-limit/preset-big-lib": "^5.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@types/dedent": "^0.7.0",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.172",
     "@types/prettier": "^2.3.2",
