fix: Update vanilla-extract Vite plugin to support monorepo import

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "skipLibCheck": true,
     "isolatedModules": true,
     "downlevelIteration": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
   },
   "exclude": ["node_modules"],
   "include": [
