--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -3,6 +3,14 @@
   "version": "0.0.0",
   "description": "Foundational components for building Pixels experiences.",
   "main": "./src/index.ts",
+  "sideEffects": [
+    "src/themes/**/*",
+    "src/css/atoms/**/*",
+    "src/css/reset/**/*",
+    "themes/**/*",
+    "reset/**/*",
+    "*.css.ts"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/samrose3/pixels.git",
