--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,8 @@
   },
   "rules": {
     "prettier/prettier": "error",
+    "react/display-name": 0,
+    "react/prop-types": 0,
     "react/react-in-jsx-scope": 0
   }
 }
