--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "site"
   ],
   "scripts": {
-    "build": "lerna run build --scope @pixels/*",
+    "build": "lerna run build --scope site",
     "dev": "cd site && yarn dev",
-    "start": "yarn dev",
+    "start": "lerna run serve --stream --scope site",
     "format": "eslint . --ext .ts,.tsx --fix",
     "lint": "eslint . --ext .ts,.tsx && tsc",
     "postinstall": "lerna bootstrap",
