--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ESNext",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -15,5 +15,6 @@
     "noEmit": true,
     "jsx": "react"
   },
+  "exclude": ["node_modules"],
   "include": ["./src"]
 }
